--- a/src/styles/productlist-page.css
+++ b/src/styles/productlist-page.css
@@ -271,7 +271,7 @@ span.size {
 }
 .prev:hover {
   height: 44px;
-
+  font-size: 23px;
   color: var(--Base-Base_White);
   background-color: var(--Primary-Primary1000);
   box-shadow: 0 6px 10px 4px rgba(0, 0, 0, 0.1);
@@ -279,6 +279,7 @@ span.size {
 
 .next {
   height: 41px;
+  white-space: nowrap;
   padding: var(--Spacings) var(--Spacingsm);
   gap: 4px;
   border-radius: var(--Spacingxxs);
