--- a/src/pagination.css
+++ b/src/pagination.css
@@ -11,9 +11,15 @@
   font-size: 24px;
   cursor: pointer;
   background-color: transparent;
+  color: #726c6c;
 }
 
 .pagination button:hover {
   font-size: 32px;
-  /* col */
+  color: #0a0a0b;
+}
+
+.pagination button .active {
+  color: #0a0a0b;
+  font-size: 32px;
 }
